--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 
     </head>
     <body>
-        <h1>AluraBooks</h1>
+        <header class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg"></a>
+            <a href="#"><img src="img/Compras.svg"></a>
+            <a href="#"><img src="img/Usuario.svg"></a>
+        </header>
 
     </body>
 </html>
