--- a/AluraBooks-main/index.html
+++ b/AluraBooks-main/index.html
@@ -12,24 +12,11 @@
     </head>
     <body>
         <header class="cabeçalho">
-            <div class="conteiner">
-                <input type="checkbox" id="menu" class="conteiner__botão">
-                <label for="menu">
-            <span class="cabeçalho__menu-hamburguer" conteiner__imagem ></span>
-            </label>
-            <img src="img/Logo.svg" alt="logo da AluraBooks" class="conteiner__imagem">
-            </div>
-            <ul class="lista-menu">
-                <li class="lista-menu__titulo"> catego
-
-                </li>
-            </ul>
-
-            <div class="conteiner">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos "class="conteiner__imagem" ></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="conteiner__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="conteiner__imagem"></a>
-            </div>
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg"></a>
+            <a href="#"><img src="img/Compras.svg"></a>
+            <a href="#"><img src="img/Usuario.svg"></a>
         </header>
 
     </body>
